Scaffold: Fix richlistbox misalignment

--- a/scss/scaffold.scss
+++ b/scss/scaffold.scss
@@ -162,6 +162,7 @@ browser,
 		margin-block: 0;
 	
 		richlistitem {
+			padding: 0;
 			align-items: center;
 		}
 	}
